--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -32,6 +32,6 @@ jobs:
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       with:
-        app-name: <YOUR_AZURE_APP_NAME>
+        app-name: api06
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
         package: publish
