--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -3,11 +3,11 @@
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   build-test-deploy:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v3
