--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -29,9 +29,13 @@ jobs:
     - name: Publish
       run: dotnet publish -c Release -o publish
 
+    - name: Login to Azure
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       with:
         app-name: api06
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
         package: publish
